--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
-<html>
+<html lang="en">
 	<head>
-		<title>Phaser3 + Parceljs Template</title>
+		<title>ZX Spectrum Jetpac Remake</title>
 	</head>
 	<body>
-		<script src="main.js"></script>
+		<script src="main.js">
+		</script>
 	</body>
 </html>
